<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">

    <item
        android:id="@+id/action_new_product"
        android:orderInCategory="100"
        android:title="@string/action_new_product"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_product"
        android:orderInCategory="100"
        android:title="@string/action_edit_product"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:title="@string/map_products"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sycronize_product"
        android:orderInCategory="100"
        android:title="@string/action_sycronize_product"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_close_compra"
        android:orderInCategory="100"
        android:title="@string/action_close_compra"
        app:showAsAction="never" />
</menu>
