<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cleister.pdv.ui.ProductEditActivity"
    tools:showIn="@layout/activity_product_edit">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerProduct"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/product_new_description"
        android:id="@+id/textViewDescription"
        android:layout_below="@+id/spinnerProduct"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDescription"
        android:layout_below="@+id/textViewDescription"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/product_new_unit"
        android:id="@+id/textViewUnit"
        android:layout_below="@+id/editTextDescription"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editTextDescription" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextUnit"
        android:layout_below="@+id/textViewUnit"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textViewUnit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/product_new_price"
        android:id="@+id/textViewPrice"
        android:layout_below="@+id/editTextUnit"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editTextUnit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTextPrice"
        android:layout_below="@+id/textViewPrice"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/product_new_barcode"
        android:id="@+id/textViewBarcode"
        android:layout_below="@+id/editTextPrice"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextBarcode"
        android:layout_below="@+id/textViewBarcode"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textViewBarcode"
        android:editable="false"
        android:enabled="false" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/product"
        android:id="@+id/imageViewProduct"
        android:layout_below="@+id/editTextBarcode"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonGalley"
        android:paddingLeft="10dp"
        android:src="@drawable/ic_image_black_48dp"
        android:background="@null"
        android:layout_alignTop="@+id/imageViewProduct"
        android:layout_toEndOf="@+id/imageViewProduct"
        android:layout_marginTop="31dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonCamera"
        android:paddingLeft="10dp"
        android:src="@drawable/ic_add_a_photo_black_48dp"
        android:background="@null"
        android:layout_below="@+id/imageButtonGalley"
        android:layout_toEndOf="@+id/imageViewProduct"
        android:layout_marginTop="24dp" />

</RelativeLayout>
